tests/ui/traits/const-traits/const_derives/derive-const-non-const-type.stderr
error: const `impl` for trait `Default` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-non-const-type.rs:10:16
   |
LL | #[derive_const(Default)]
   |                ^^^^^^^ this trait is not `const`
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0015]: cannot call non-const associated function `<A as Default>::default` in constant functions
  --> $DIR/derive-const-non-const-type.rs:11:14
   |
LL | #[derive_const(Default)]
   |                ------- in this derive macro expansion
LL | pub struct S(A);
   |              ^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
